After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699294 - v4l2: fix broken boolean expression to detect non-frame buffers
v4l2: fix broken boolean expression to detect non-frame buffers
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-30 09:39 UTC by Michael Olbrich
Modified: 2013-04-30 09:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (937 bytes, patch)
2013-04-30 09:39 UTC, Michael Olbrich
committed Details | Review

Description Michael Olbrich 2013-04-30 09:39:07 UTC
This is a fixup for the patch from https://bugzilla.gnome.org/show_bug.cgi?id=698949
I added the second option when cleaning up the patch for submission and tested it with the wrong pipeline. Sorry about that.
Comment 1 Michael Olbrich 2013-04-30 09:39:34 UTC
Created attachment 242894 [details] [review]
patch
Comment 2 Sebastian Dröge (slomo) 2013-04-30 09:47:57 UTC
commit bf3a0b7e37c90d024e7950445614ef881f0e0a4d
Author: Michael Olbrich <m.olbrich@pengutronix.de>
Date:   Tue Apr 30 09:16:07 2013 +0200

    v4l2: fix broken boolean expression to detect non-frame buffers
    
    https://bugzilla.gnome.org/show_bug.cgi?id=699294