v4l2: fix broken boolean expression to detect non-frame buffers

https://bugzilla.gnome.org/show_bug.cgi?id=699294